<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="text_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="arrow_back">arrow_back</string>
    <string name="search_screen">Вы попали на экран поиска :)</string>
    <string name="media_screen">Вы попали на экран медиатеки :)</string>
    <string name="settings_message">Привет, Android разработка — это круто!</string>
    <string name="settings_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_email">evg.ermolov@ya.ru</string>
    <string name="settings_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="setting_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="track_title">Название трека</string>
    <string name="track_artist">Исполнитель</string>
    <string name="track_time">13:37</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button_text">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="timing">00:00</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_playlists_there">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing_in_favourite">Ваша медиатека пуста</string>
    <string name="create">Создать</string>
    <string name="Naming">Название*</string>
    <string name="defenition">Описание</string>
    <string name="new_playlist_header">Новый плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="all_data_would_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="exit_question">Завершить создание плейлиста?</string>
    <string name="edit_exit_question">Завершить изменение плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_was_created">Плейлист %1$s создан</string>
    <string name="track">" трек"</string>
    <string name="tracks">" треков"</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="change">Сохранить</string>
    <string name="question_to_delete">Уверены, что хотите удалить трек из плейлиста?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="sharePlaylist">Поделиться плейлистом</string>
    <string name="look_what_i_did">Смотри какой я сделал(а) плейлист!</string>
    <string name="playlist">плейлист c названием - </string>
    <string name="naming">Название трека </string>
    <string name="message_no_tracks">В данном плейлисте нет списка треков, которым можно поделиться.</string>
    <string name="quantityTracks">С таким количеством</string>
    <string name="no_tracks">Вы ещё не добавили ни одного трека</string>
    <string name="save">Сохранить</string>
    <string name="question_to_delete_playlist">Вы уверены, что хотите удалить плейлист?</string>
</resources>