<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/settings_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/common_padding"
    android:paddingTop="@dimen/layouts_padding"
    tools:context=".settings.ui.fragment.SettingsFragment">>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/settings_text_view"
            android:text="@string/settings"
            android:textSize="@dimen/main_text_size"
            android:fontFamily="@font/ys_display_medium"/>
    </LinearLayout>

    <LinearLayout
        style="@style/settings_linear_layout"
        android:paddingVertical="0dp"
        android:layout_marginTop="@dimen/layouts_paddingtop_large">

        <TextView
            style="@style/settings_text_view"
            android:layout_marginVertical="21dp"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/settings_switch"
            android:layout_width="wrap_content"
            android:id="@+id/themeSwitcher"
            android:switchMinWidth="32dp"
            android:layout_height="48dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_share"
        style="@style/settings_linear_layout">

        <TextView
            style="@style/settings_text_view"
            android:layout_width="356dp"
            android:text="@string/share_app" />

        <ImageView
            style="@style/settings_image_view"
            android:src="@drawable/share"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_help"
        style="@style/settings_linear_layout">

        <TextView
            style="@style/settings_text_view"
            android:text="@string/text_to_support"/>

        <ImageView
            style="@style/settings_image_view"
            android:src="@drawable/support"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_user_agreements"
        style="@style/settings_linear_layout">

        <TextView
            style="@style/settings_text_view"
            android:text="@string/user_agreement"/>

        <ImageView
            style="@style/settings_image_view"
            android:src="@drawable/arrow_forward"/>
    </LinearLayout>

</LinearLayout>