<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/back"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp">
        </ImageView>
        <TextView
            style="@style/search_header_text"
            android:text="@string/new_playlist_header"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="top"
            android:layout_marginTop="10dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/album_coverage"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="82dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/creating_album_cover"/>

    <EditText
        style="@style/playlist_edit_text"
        android:id="@+id/name_of_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_coverage"
        android:layout_marginTop="32dp"
        android:text="@string/Naming"/>
    <EditText
        style="@style/playlist_edit_text"
        android:id="@+id/description_of_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_of_album"
        android:layout_marginTop="16dp"
        android:text="@string/defenition"/>
    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/createPlaylist"
        android:layout_width="326dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:background="@drawable/button_create_playlist"/>

</androidx.constraintlayout.widget.ConstraintLayout>