<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/search_element_main_layout_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/track_cover"
        android:layout_width="@dimen/search_screen_cover_size"
        android:layout_height="@dimen/search_screen_cover_size"
        android:layout_marginStart="@dimen/search_screen_cover_margin_start"
        android:src="@drawable/song_cover" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/search_screen_title_padding_start"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name"
            style="@style/search_element_song_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/track_artist"
                style="@style/search_element_artist_name_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/track_artist"
                tools:ignore="TextContrastCheck" />

            <ImageView
                style="@style/search_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:padding="@dimen/search_screen_dot_padding"
                android:src="@drawable/dot" />

            <TextView
                android:id="@+id/track_time"
                style="@style/search_element_artist_name_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_time"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>
    </LinearLayout>

    <ImageView
        style="@style/settings_image_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="12dp"
        android:src="@drawable/arrow_forward" />


</LinearLayout>