<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="14dp"
    android:paddingBottom="0dp"
    style="@style/settings_background"
    tools:context=".search.ui.fragment.SearchFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="2dp">

        <TextView
            style="@style/search_header_text"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="top" />
    </LinearLayout>
    <LinearLayout
        style="@style/search_linear_layout_style"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:background="@drawable/search_field">
        <EditText
            android:id="@+id/input_edit_text"
            style="@style/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/search_field"
            android:drawableLeft="@drawable/search"
            android:drawablePadding="9dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLength="64"
            android:maxLines="1"
            android:paddingStart="13dp"
            android:singleLine="true"
            android:textColor="@color/black_text"
            app:cornerRadius="18dp" />
        <ImageView
            style="@style/search_clear_icon"
            android:id="@+id/clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:src="@drawable/is_baseline_clear"
            android:visibility="gone" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:indeterminateTint="@color/yp_blue"
        android:visibility="gone" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        tools:listitem="@layout/search_result_item"
        tools:itemCount="5"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/history_layout"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/search_error_text"
            android:id="@+id/history_title"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:text="@string/search_history" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black_text">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_history_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black_text"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/clear_button"
            style="@style/search_activity_refresh_button"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/clear_history_button"
            android:layout_marginBottom="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nothing_found_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="210dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/nothing_found" />

        <TextView
            android:id="@+id/nothing_found_text"
            style="@style/primary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/nothing_found"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/net_problem_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="210dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/no_internet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/no_internet"
            android:textSize="19sp"
            android:gravity="center"
            style="@style/primary_text" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:backgroundTint="?attr/colorOnPrimary"
            android:text="@string/refresh_button_text"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            android:maxLines="1"
            android:textAllCaps="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="54dp"
            style="@style/primary_text" />

    </LinearLayout>

</LinearLayout>